sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: value faitechange
  while(faitechange==true)
        ^AlgBubbleSort1:4: error: not found: value faitechange
        faitechange=false
        ^AlgBubbleSort1:5: error: not found: value getNomebreValleurs
      for(i<-0 to getNomebreValleurs()-2)
                  ^